Implemented the  new CRUD operations for theater.
